--- a/dune
+++ b/dune
@@ -1,6 +1,6 @@
 (executable
  (name test)
- (libraries yojson jsch react brr ppx_deriving note)
+ (libraries yojson jsch react brr ppx_deriving)
  (modes js)
  (link_flags (:standard -no-check-prims))
  (preprocess (pps js_of_ocaml-ppx ppx_deriving.eq ppx_deriving.show)))
