--- a/lib/server/dune
+++ b/lib/server/dune
@@ -1,3 +1,3 @@
 (library
  (name vserver)
- (libraries cohttp cohttp-lwt-unix routes yojson types fpath))
+ (libraries cohttp cohttp-lwt-unix routes yojson types))
